--- a/index.html
+++ b/index.html
@@ -3,10 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Redirecting to https://example.com/</title>
-    <meta http-equiv="refresh" content="0; URL=https://example.com/">
+    <title>Redirecting to my portfolio</title>
+    <meta http-equiv="refresh" content="0; URL=https://sureshsharmaxyz.notion.site/Hello-I-m-Suresh-Sharma-8034ac3b4c074edb9be40a3da2c34e58">
 </head>
-<body>
-    Hello World
-</body>
 </html>
